# betty-nginx

./: .coveragerc  .gitignore  .ruff.toml  CONTRIBUTING.md  README.md  mypy.ini  nose2.cfg  pyproject.toml  pytest.ini  setup.py  tox.ini
.github/workflows/: release-build-setuptools.yml  test.yml
betty_nginx/: __init__.py  _cli.py  artifact.py  config.py  docker.py  gui.py  nginx.py  serve.py
betty_nginx/assets/: betty_nginx.pot  nginx.conf.j2
betty_nginx/assets/locale/: betty.pot
betty_nginx/assets/locale/nl_NL/LC_MESSAGES/: betty_nginx.po
betty_nginx/tests/: conftest.py  test___init__.py  test_artifact.py  test_cli.py  test_config.py  test_docker.py  test_gui.py  test_integration.py  test_locale.py  test_serve.py  test_translation.py
betty_nginx/tests/test_integration_assets/: betty-monolingual-content-negotiation.json  betty-monolingual.json  betty-multilingual-content-negotiation.json  betty-multilingual.json
busted/: content_negotiation_spec.lua
